# xsh

./: Makefile.am  README.md  autogen.sh  configure.ac  xsh.exe.stackdump
doc/: shell.c
doc/POSIX/: libxsh-job.c  libxsh.h  xsh.c
doc/msh/: utilities.h
etc/: Makefile.am  xsh.conf.in  xshrc.in
etc/conf.d/: Makefile.am  env.conf  env.conf.in  log.conf.in
po/: ChangeLog  POTFILES.in
src/: Makefile.am  libxsh-i18n.c  libxsh-i18n.h  libxsh.c  libxsh.h  xsh.c  xsh.exe.stackdump  xsh.h.in
